@startuml
'https://plantuml.com/class-diagram
skinparam packageStyle rectangle
hide class members
package errorhandlers{
class CheckParameters
class OmniException
class Exception
}

package travelactivitytypes{
}

package parser{
}

package ui{
}




OmniException --|> Exception
CheckParameters ..> OmniException
CheckParameters --> ui
parser --> CheckParameters
travelactivitytypes --> CheckParameters


@enduml